src/objects/Service_Contract_Owner_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Account_Location__c</fullName>
        <description>Enter account shipping country location. When left blank, it applies to all account locations.</description>
        <inlineHelpText>Enter account shipping country location. When left blank, it applies to all account locations.</inlineHelpText>
        <label>Account Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Enter account type. When left blank, it applies to all account types.</description>
        <inlineHelpText>Enter account type. When left blank, it applies to all account types.</inlineHelpText>
        <label>Account Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_to_Account_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assign Renewal Opportunities to Account Owner</description>
        <inlineHelpText>Assign Renewal Opportunities to Account Owner</inlineHelpText>
        <label>Assign to Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pick Product. When left blank, it applies to all Products.</description>
        <inlineHelpText>Pick Product. When left blank, it applies to all Products.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Contract Owner Mappings</relationshipLabel>
        <relationshipName>Renewal_Opp_Owner_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Opp_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the user to whom Renewal Opportunity should be assigned for this mapping.</description>
        <inlineHelpText>Select the user to whom Renewal Opportunity should be assigned for this mapping.</inlineHelpText>
        <label>Renewal Opp Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Renewal_Opp_Owner_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the user to whom Service Contracts should be assigned for this mapping.</description>
        <inlineHelpText>Select the user to whom Service Contracts should be assigned for this mapping.</inlineHelpText>
        <label>Service Contract Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Contract_Owner_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Contract Owner Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Contract Owner Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>